save security version 1 - without registration

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>home</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>
-    Coffee shop
-</h1>
+<h1>home page</h1>
+<a href="/hello">Login</a>
+
 </body>
 </html>
